Second Major Update
index.html and css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/styles.css" />
@@ -34,9 +38,102 @@
           <div class="box">hello, i am</div>
           <img class="polygon" src="images/Polygon 1.svg" alt="polygon" />
           <h2>mr. john weary</h2>
-          <h5 class="professional">A Professional Web Developer and UI/UX Designer.</h5>
+          <h6 class="professional">
+            A Professional Web Developer and UI/UX Designer.
+          </h6>
           <button class="cv">download CV</button>
           <button class="cv">my work</button>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="life">
+        <img src="images/computer.jpg" alt="Person typing on keyboard" />
+        <div class="right-block">
+          <h4 class="struggle">read about my life struggle story!</h4>
+          <p class="text">
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem totam
+            rem aperiam, eaque ipsa quae ab illo inventore veritatis et is the
+            quasi architecto beatae vitae dicta sunt explicabo.
+          </p>
+          <span>wordpress 100%</span>
+          <span class="loading">html 75%</span>
+          <span>php 85%</span>
+          <span class="loading">css 95%</span>
+          <div class="buttons">
+            <button class="cv">hire me!</button>
+            <button class="cv">about me</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="services">
+        <h4>our services</h4>
+        <p class="text2">
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem totam
+          rem aperiam, eaque ipsa quae ab illo inventore veritatis et is the
+          quasi architecto beatae vitae dicta sunt explicabo.
+        </p>
+      </div>
+      <div class="grid">
+        <div class="rectangle">
+          <i class="fa-brands fa-wordpress"></i>
+          <h6 class="product">wordpress</h6>
+          <i class="fa-solid fa-arrow-right-long a"></i>
+        </div>
+        <div class="rectangle">
+          <i class="fa-solid fa-code"></i>
+          <h6 class="product">HTML</h6>
+          <i class="fa-solid fa-arrow-right-long b"></i>
+        </div>
+        <div class="rectangle">
+          <img class="icon" src="images/web_development.svg" alt="Display">
+          <h6 class="product">web development</h6>
+          <i class="fa-solid fa-arrow-right-long c"></i>
+        </div>
+        <div class="rectangle">
+          <img class="icon" src="images/CSS.svg" alt="Curly brackets">
+          <h6 class="product">CSS</h6>
+          <i class="fa-solid fa-arrow-right-long d"></i>
+        </div>
+        <div class="rectangle">
+          <i class="fa-solid fa-code"></i>
+          <h6 class="product">PHP</h6>
+          <i class="fa-solid fa-arrow-right-long e"></i>
+        </div>
+        <div class="rectangle">
+          <img class="icon" src="images/problem_solving.svg" alt="Jigsaw">
+          <h6 class="product">problem solving</h6>
+          <i class="fa-solid fa-arrow-right-long f"></i>
+        </div>
+      </div>
+      <div class="view-all">view all</div>
+    </section>
+    <section>
+      <div class="box-line">
+        <div class="dashed-box">
+          <div class="numbers-text">
+            <h3 class="number">50+</h3>
+            <h5>clients</h5>
+          </div>
+        </div>
+        <div class="dashed-box">
+          <div class="numbers-text">
+            <h3 class="number">68</h3>
+            <h5>projects</h5>
+          </div>
+        </div>
+        <div class="dashed-box">
+          <div class="numbers-text">
+            <h3 class="number">30</h3>
+            <h5>awards</h5>
+          </div>
+        </div>
+        <div class="dashed-box">
+            <h3 class="number-1">06</h3>
+            <h5 class="text3">years experience</h5>
+          </div>
         </div>
       </div>
     </section>
