--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section>
       <div class="services">
         <h4>our services</h4>
-        <p class="text2">
+        <p>
           Sed ut perspiciatis unde omnis iste natus error sit voluptatem totam
           rem aperiam, eaque ipsa quae ab illo inventore veritatis et is the
           quasi architecto beatae vitae dicta sunt explicabo.
@@ -132,10 +132,151 @@
         </div>
         <div class="dashed-box">
             <h3 class="number-1">06</h3>
-            <h5 class="text3">years experience</h5>
+            <h5 class="text1">years experience</h5>
           </div>
         </div>
       </div>
     </section>
+    <section>
+      <div class="portfolio">
+        <h4>our portfolio</h4>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam 
+        rem aperiam, eaque ipsa quae ab illo inventore veritatis et is 
+        the quasi architecto beatae vitae dicta sunt explicabo.</p>
+      </div>
+    </section>
+    <section>
+      <nav>
+        <ul class="nav-low">
+          <li class="low">all</li>
+          <li class="low">web development</li>
+          <li class="low">HTML</li>
+          <li class="low">UI/UX</li>
+          <li class="low">web design</li>
+        </ul>
+      </nav>
+    </section>
+    <section>
+      <div class="grid2">
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+      </div>
+      <div class="view-all">view all</div>
+    </section>
+    <section>
+      <div class="testimonials">
+        <h4>testimonials</h4>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam rem aperiam, eaque ipsa 
+        quae ab illo inventore veritatis et is the quasi architecto beatae vitae dicta sunt explicabo.</p>
+        <img class="doe" src="images/John Doe.jpg" alt="Profile">
+        <span class="john">john doe</span>
+        <span class="ceo">CEO abc company</span>
+        <p class="text2">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
+        atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+        in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et 
+        expedita distinctio.</p>
+      </div>
+    </section>
+    <section>
+      <div class="laptop">
+        <div class="text-block">
+          <h6 class="mind">have any project in mind?</h6>
+          <h4 class="freelancing">i'm available for freelancing</h4>
+          <div class="view-all">hire me!</div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="blog">
+        <h4>latest blog</h4>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam rem aperiam, eaque ipsa quae ab 
+          illo inventore veritatis et is the quasi architecto beatae vitae dicta sunt explicabo.</p>
+      </div>
+      <div class="trio">
+        <div class="triple">
+          <img class="picture" src="images/post-6.jpg" alt="Man sitting at computer">
+          <span class="date">26th october, 2019</span>
+          <h6 class="mb">i use the web for a day on a 50 MB budget</h6>
+          <span class="learn-more">learn more</span>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+        <div class="triple"><img class="picture" src="images/post-2.jpg" alt="Two man discusing">
+          <span class="date">26th october, 2019</span>
+          <h6 class="mb">i use the web for a day on a 50 MB budget</h6>
+          <span class="learn-more">learn more</span>
+          <i class="fa-solid fa-arrow-right"></i></div>
+        <div class="triple">
+          <img class="picture" src="images/post-4.jpg" alt="Team Work">
+          <span class="date">26th october, 2019</span>
+          <h6 class="mb">i use the web for a day on a 50 MB budget</h6>
+          <span class="learn-more">learn more</span>
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+      </div>
+      <div class="view-all">view all</div>
+    </section>
+    <footer>
+      <div class="upper-part">
+        <div class="address">
+          <h4>contact us</h4>
+          <p class="last-paragraph">Let's make something new, different and more meaningful
+            or make thing more visual or conceptual?</p>
+            <div class="bar">
+              <div class="circle">
+                <img class="sign" src="images/phone.svg" alt="Phone">
+              </div>
+              <div class="shard">
+                <span class="contact">call me</span>
+                <a class="reach" href="tel:+123 456 7890">+123 456 7890</a>
+              </div>
+            </div>
+            <div class="bar">
+              <div class="circle">
+                <i class="fa-regular fa-envelope"></i>
+              </div>
+              <div class="shard">
+                <span class="contact">email</span>
+                <a class="reach" href="mailto:info@coder.com">info@coder.com</a>
+              </div>
+            </div>
+            <div class="bar">
+              <div class="circle">
+                <i class="fa-solid fa-location-dot"></i>
+              </div>
+              <div class="shard">
+                <span class="contact">address</span>
+                <a class="reach" target="_blank" href="https://www.google.ge/maps/place/27+Division+St,+New+York,+NY+10002,+USA/@40.7139743,-73.9983047,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a263f3910db:0xd6e6cdf32a6b11b1!8m2!3d40.7139743!4d-73.996116?hl=en&authuser=0">27 Division St, New York,
+                  NY 10002, USA</a>
+              </div>
+            </div>
+          </div>
+          <div class="contact-info">
+            <h4>drop a line</h4>
+            <div class="grid-3">
+              <input type="text" name="name" id="name" placeholder="Name">
+              <input type="email" name="email" id="email" placeholder="Email">
+              <input type="tel" name="telephone" id="telephone" placeholder="Phone#">
+              <input type="number" name="budget" id="budget" placeholder="Budget">
+              <textarea name="textarea" id="textarea" placeholder="Message"></textarea>
+            </div> 
+          </div>
+      </div>
+      <span class="find">find me on</span>
+      <div class="orange">
+        <div class="orange-bar">
+          <i class="fa-brands fa-behance"></i>
+          <i class="fa-brands fa-dribbble"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-linkedin-in"></i>
+          <i class="fa-brands fa-pinterest-p"></i>
+        </div>
+        <button class="view-all-1" type="submit">submit</button>
+      </div>
+      <span class="copy">Copyright ©2019Coder. All Rights Reserved.</span>
+    </footer>
   </body>
-</html>
+  </html>
