Fourth Major Update
index.html
styles.css
responsive.css

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
           </ul>
         </nav>
         <button class="prime">hire me!</button>
+        <div class="burger-bar">
+          <div class="bar-1"></div>
+          <div class="bar-2"></div>
+          <div class="bar-3"></div>
+        </div>
       </div>
     </header>
     <section>
@@ -37,12 +42,12 @@
         <div class="area">
           <div class="box">hello, i am</div>
           <img class="polygon" src="images/Polygon 1.svg" alt="polygon" />
-          <h2>mr. john weary</h2>
+          <h2 class="weary">mr. john weary</h2>
           <h6 class="professional">
             A Professional Web Developer and UI/UX Designer.
           </h6>
           <button class="cv">download CV</button>
-          <button class="cv">my work</button>
+          <button class="cv-1">my work</button>
         </div>
       </div>
     </section>
@@ -62,7 +67,7 @@
           <span class="loading">css 95%</span>
           <div class="buttons">
             <button class="cv">hire me!</button>
-            <button class="cv">about me</button>
+            <button class="cv-2">about me</button>
           </div>
         </div>
       </div>
@@ -76,36 +81,38 @@
           quasi architecto beatae vitae dicta sunt explicabo.
         </p>
       </div>
-      <div class="grid">
-        <div class="rectangle">
-          <i class="fa-brands fa-wordpress"></i>
-          <h6 class="product">wordpress</h6>
-          <i class="fa-solid fa-arrow-right-long a"></i>
-        </div>
-        <div class="rectangle">
-          <i class="fa-solid fa-code"></i>
-          <h6 class="product">HTML</h6>
-          <i class="fa-solid fa-arrow-right-long b"></i>
-        </div>
-        <div class="rectangle">
-          <img class="icon" src="images/web_development.svg" alt="Display">
-          <h6 class="product">web development</h6>
-          <i class="fa-solid fa-arrow-right-long c"></i>
-        </div>
-        <div class="rectangle">
-          <img class="icon" src="images/CSS.svg" alt="Curly brackets">
-          <h6 class="product">CSS</h6>
-          <i class="fa-solid fa-arrow-right-long d"></i>
-        </div>
-        <div class="rectangle">
-          <i class="fa-solid fa-code"></i>
-          <h6 class="product">PHP</h6>
-          <i class="fa-solid fa-arrow-right-long e"></i>
-        </div>
-        <div class="rectangle">
-          <img class="icon" src="images/problem_solving.svg" alt="Jigsaw">
-          <h6 class="product">problem solving</h6>
-          <i class="fa-solid fa-arrow-right-long f"></i>
+      <div class="nest">
+        <div class="grid">
+          <div class="rectangle">
+            <i class="fa-brands fa-wordpress"></i>
+            <h6 class="product">wordpress</h6>
+            <i class="fa-solid fa-arrow-right-long a"></i>
+          </div>
+          <div class="rectangle">
+            <i class="fa-solid fa-code"></i>
+            <h6 class="product">HTML</h6>
+            <i class="fa-solid fa-arrow-right-long b"></i>
+          </div>
+          <div class="rectangle">
+            <img class="icon" src="images/web_development.svg" alt="Display">
+            <h6 class="product">web development</h6>
+            <i class="fa-solid fa-arrow-right-long c"></i>
+          </div>
+          <div class="rectangle">
+            <img class="icon" src="images/CSS.svg" alt="Curly brackets">
+            <h6 class="product">CSS</h6>
+            <i class="fa-solid fa-arrow-right-long d"></i>
+          </div>
+          <div class="rectangle">
+            <i class="fa-solid fa-code"></i>
+            <h6 class="product">PHP</h6>
+            <i class="fa-solid fa-arrow-right-long e"></i>
+          </div>
+          <div class="rectangle">
+            <img class="icon" src="images/problem_solving.svg" alt="Jigsaw">
+            <h6 class="product">problem solving</h6>
+            <i class="fa-solid fa-arrow-right-long f"></i>
+          </div>
         </div>
       </div>
       <div class="view-all">view all</div>
@@ -115,19 +122,19 @@
         <div class="dashed-box">
           <div class="numbers-text">
             <h3 class="number">50+</h3>
-            <h5>clients</h5>
+            <h5 class="text3">clients</h5>
           </div>
         </div>
         <div class="dashed-box">
           <div class="numbers-text">
             <h3 class="number">68</h3>
-            <h5>projects</h5>
+            <h5 class="text3">projects</h5>
           </div>
         </div>
         <div class="dashed-box">
           <div class="numbers-text">
             <h3 class="number">30</h3>
-            <h5>awards</h5>
+            <h5 class="text3">awards</h5>
           </div>
         </div>
         <div class="dashed-box">
@@ -147,32 +154,37 @@
     </section>
     <section>
       <nav>
-        <ul class="nav-low">
-          <li class="low">all</li>
-          <li class="low">web development</li>
-          <li class="low">HTML</li>
-          <li class="low">UI/UX</li>
-          <li class="low">web design</li>
-        </ul>
-      </nav>
-    </section>
-    <section>
-      <div class="grid2">
-        <div class="image"></div>
-        <div class="image"></div>
-        <div class="image"></div>
-        <div class="image"></div>
-        <div class="image"></div>
-        <div class="image"></div>
-      </div>
-      <div class="view-all">view all</div>
+          <ul class="nav-low">
+            <li class="low">all</li>
+            <li class="low">web development</li>
+            <li class="low">HTML</li>
+            <li class="low">UI/UX</li>
+            <li class="low">web design</li>
+            <div class="burger-bar-low">
+              <div class="bar-4"></div>
+              <div class="bar-5"></div>
+              <div class="bar-6"></div>
+            </div>
+          </ul>
+        </nav>
+      </section>
+      <section>
+        <div class="grid2">
+            <div class="image"></div>
+            <div class="image"></div>
+            <div class="image"></div>
+            <div class="image"></div>
+            <div class="image"></div>
+            <div class="image"></div>
+          </div>
+          <div class="view-all">view all</div>
     </section>
     <section>
       <div class="testimonials">
         <h4>testimonials</h4>
         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  totam rem aperiam, eaque ipsa 
         quae ab illo inventore veritatis et is the quasi architecto beatae vitae dicta sunt explicabo.</p>
-        <img class="doe" src="images/John Doe.jpg" alt="Profile">
+        <img class="doe" src="images/John Doe.svg" alt="Profile">
         <span class="john">john doe</span>
         <span class="ceo">CEO abc company</span>
         <p class="text2">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
@@ -199,22 +211,36 @@
       <div class="trio">
         <div class="triple">
           <img class="picture" src="images/post-6.jpg" alt="Man sitting at computer">
-          <span class="date">26th october, 2019</span>
-          <h6 class="mb">i use the web for a day on a 50 MB budget</h6>
-          <span class="learn-more">learn more</span>
-          <i class="fa-solid fa-arrow-right"></i>
+          <div class="block">
+            <span class="date">26th october, 2019</span>
+            <h6 class="mb">i use the web for a day on a 50 MB budget</h6>
+            <div class="learn">
+              <span class="learn-more">learn more</span>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
         </div>
-        <div class="triple"><img class="picture" src="images/post-2.jpg" alt="Two man discusing">
-          <span class="date">26th october, 2019</span>
-          <h6 class="mb">i use the web for a day on a 50 MB budget</h6>
-          <span class="learn-more">learn more</span>
-          <i class="fa-solid fa-arrow-right"></i></div>
         <div class="triple">
+          <img class="picture" src="images/post-2.jpg" alt="Two man discusing">
+          <div class="block">
+            <span class="date">26th october, 2019</span>
+            <h6 class="mb">i use the web for a day on a 50 MB budget</h6>
+            <div class="learn">
+              <span class="learn-more">learn more</span>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
+        </div>
+          <div class="triple">
           <img class="picture" src="images/post-4.jpg" alt="Team Work">
-          <span class="date">26th october, 2019</span>
-          <h6 class="mb">i use the web for a day on a 50 MB budget</h6>
-          <span class="learn-more">learn more</span>
-          <i class="fa-solid fa-arrow-right"></i>
+          <div class="block">
+            <span class="date">26th october, 2019</span>
+            <h6 class="mb">i use the web for a day on a 50 MB budget</h6>
+            <div class="learn">
+              <span class="learn-more">learn more</span>
+              <i class="fa-solid fa-arrow-right"></i>
+            </div>
+          </div>
         </div>
       </div>
       <div class="view-all">view all</div>
@@ -222,7 +248,7 @@
     <footer>
       <div class="upper-part">
         <div class="address">
-          <h4>contact us</h4>
+          <h4 class="contact-us">contact us</h4>
           <p class="last-paragraph">Let's make something new, different and more meaningful
             or make thing more visual or conceptual?</p>
             <div class="bar">
@@ -268,11 +294,11 @@
       <span class="find">find me on</span>
       <div class="orange">
         <div class="orange-bar">
-          <i class="fa-brands fa-behance"></i>
-          <i class="fa-brands fa-dribbble"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-linkedin-in"></i>
-          <i class="fa-brands fa-pinterest-p"></i>
+          <a target="_blank" href="https://www.behance.net/"><i class="fa-brands fa-behance"></i></a>
+          <a target="_blank" href="https://dribbble.com/"><i class="fa-brands fa-dribbble"></i></a>
+          <a target="_blank" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a target="_blank" href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest-p"></i></a>
         </div>
         <button class="view-all-1" type="submit">submit</button>
       </div>
